Finish translating things in a couple more places

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="{{ site.baseurl }}/{% t links.projects %}/">{% t pages.projects %}</a>
         </li>
       {% if post.lang == "pt-br" or page.lang  == "pt-br" or site.lang == "pt-br" or post.tags contains "portuguese" %}
-        <li><a href="https://thiagomarinho.net/en"> 🇬🇧 </a></li>
+        <li><a href="https://thiagomarinho.net/en"> 🇺🇲 </a></li>
       {% elsif post.lang == "en" or page.lang  == "en" or site.lang == "en" or post.tags contains "english" %}
         <li><a href="https://thiagomarinho.net/"> 🇧🇷 </a></li>
       {% endif %}
